--- a/styles.css
+++ b/styles.css
@@ -45,3 +45,23 @@ header div a:hover {
   border-radius: 50%;
   margin-bottom: 32px;
 }
+
+.wrapper h1 {
+  font-size: 42px;
+  line-height: 52px;
+  font-weight: bold;
+}
+
+.wrapper h2 {
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 34px;
+  margin-top: 8px;
+  opacity: 0.8;
+}
+
+.wrapper p {
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 34px;
+}
