--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
 
+:root {
+  --color-green: #50fa7b;
+}
+
 * {
   border: none;
   margin: 0;
@@ -31,7 +35,7 @@ header div a {
 }
 
 header div a:hover {
-  color: #50fa7b;
+  color: var(--color-green);
   transition: color 700ms;
 }
 
@@ -41,7 +45,7 @@ header div a:hover {
 }
 
 .wrapper img {
-  border: 3px solid #50fa7b;
+  border: 3px solid var(--color-green);
   border-radius: 50%;
   margin-bottom: 32px;
 }
@@ -64,4 +68,8 @@ header div a:hover {
   font-size: 24px;
   font-weight: normal;
   line-height: 34px;
+}
+
+.wrapper p a {
+  color: var(--color-green);
 }
