--- a/styles.css
+++ b/styles.css
@@ -22,11 +22,11 @@ header {
   padding: 32px;
 }
 
-header div {
+.links {
   text-align: center;
 }
 
-header div a {
+.links a {
   color: white;
   font-size: 18px;
   line-height: 28px;
@@ -34,7 +34,7 @@ header div a {
   text-decoration: none;
 }
 
-header div a:hover {
+.links a:hover {
   color: var(--color-green);
   transition: color 700ms;
 }
@@ -72,4 +72,8 @@ header div a:hover {
 
 .wrapper p a {
   color: var(--color-green);
+}
+
+#links-footer a {
+  border-bottom: 1px solid var(--color-green);
 }
