--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 
 :root {
   --color-green: #50fa7b;
+  --color-purple: #7159c1;
 }
 
 * {
@@ -76,4 +77,22 @@ header {
 
 #links-footer a {
   border-bottom: 1px solid var(--color-green);
+}
+
+.cards {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.card {
+  background: var(--color-purple);
+}
+
+.card_img img {
+  width: 100%;
+}
+
+.card_content,
+.card_info {
+  padding: 24px;
 }
