--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,9 @@ header {
 .wrapper img {
   border: 3px solid var(--color-green);
   border-radius: 50%;
+  height: 250px;
   margin-bottom: 32px;
+  width: 250px;
 }
 
 .wrapper h1 {
