--- a/styles.css
+++ b/styles.css
@@ -153,3 +153,10 @@ header {
   color: black;
   cursor: pointer;
 }
+
+iframe {
+  height: 90%;
+  top: 5%;
+  position: absolute;
+  width: 100%;
+}
